ADEN-2233 Fixed covering top leaderboard on interstitial ad unit

--- a/front/styles/main/module/_ads.scss
+++ b/front/styles/main/module/_ads.scss
@@ -15,6 +15,8 @@
 .mobile-top-leaderboard {
 	min-height: 50px;
 	margin-top: 60px;
+	position: relative;
+	z-index: 30;
 }
 
 .mobile-in-content, .mobile-prefooter {
